log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Mon May 11 01:54:10 PM UTC 2026: 
 tests:  0|6
========================================
2064562
Thu May 14 09:40:59 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
2868b27
Thu May 14 09:41:42 PM UTC 2026: 
 tests:  0|0
8874371
Thu May 14 10:24:25 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:38:37: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   38 |     if (map_search(g->adjacencyMap, label) != NULL) return ;
      |                                     ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
80da252
Thu May 14 10:26:21 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c81bcfc
Thu May 14 10:31:25 PM UTC 2026: 
 graph.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:46:55: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   46 |     List* edges = (List*) map_search(g->adjacencyMap, src);
      |                                                       ^~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:52:23: error: implicit declaration of function ‘srtdup’; did you mean ‘strdup’? [-Wimplicit-function-declaration]
   52 |     newEdge->target = srtdup(dest);
      |                       ^~~~~~
      |                       strdup
graph.c:52:21: error: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   52 |     newEdge->target = srtdup(dest);
      |                     ^
cc1: all warnings being treated as errors
1f47ca5
Thu May 14 10:32:07 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:46:55: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   46 |     List* edges = (List*) map_search(g->adjacencyMap, src);
      |                                                       ^~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
In function ‘addEdge’,
    inlined from ‘addEdge’ at graph.c:44:6:
graph.c:52:21: error: array subscript ‘Edge[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   52 |     newEdge->target = strdup(dest);
      |     ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
graph.c:49:29: note: object of size 8 allocated by ‘malloc’
   49 |     Edge* newEdge = (Edge*) malloc(sizeof(Edge*));
      |                             ^~~~~~~~~~~~~~~~~~~~~
graph.c:53:21: error: array subscript ‘Edge[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   53 |     newEdge->weight = weight;
      |     ~~~~~~~~~~~~~~~~^~~~~~~~
graph.c:49:29: note: object of size 8 allocated by ‘malloc’
   49 |     Edge* newEdge = (Edge*) malloc(sizeof(Edge*));
      |                             ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
5e55f1b
Thu May 14 10:33:43 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
In function ‘addEdge’,
    inlined from ‘addEdge’ at graph.c:44:6:
graph.c:52:21: error: array subscript ‘Edge[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   52 |     newEdge->target = strdup(dest);
      |     ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
graph.c:49:29: note: object of size 8 allocated by ‘malloc’
   49 |     Edge* newEdge = (Edge*) malloc(sizeof(Edge*));
      |                             ^~~~~~~~~~~~~~~~~~~~~
graph.c:53:21: error: array subscript ‘Edge[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   53 |     newEdge->weight = weight;
      |     ~~~~~~~~~~~~~~~~^~~~~~~~
graph.c:49:29: note: object of size 8 allocated by ‘malloc’
   49 |     Edge* newEdge = (Edge*) malloc(sizeof(Edge*));
      |                             ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
26c4bf1
